<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="always"

        />

    <item android:id="@+id/action_favorites"
        android:title="@string/favorites_title"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="2"
        app:showAsAction="always"
      />


    <item android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        />

</menu>
